--- a/TrinityCreator/QuestPreview.xaml
+++ b/TrinityCreator/QuestPreview.xaml
@@ -12,8 +12,11 @@
         </Grid.Background>
         <ScrollViewer Margin="20,77,8,29">
             <StackPanel Margin="5">
-                <TextBox Text="{Binding LogTitle}"  FontFamily="./Resources/#Morpheus" FontSize="21.333" Background="Transparent"/>
-                <TextBox Text="ml" FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBox Text="{Binding LogTitle}" FontFamily="./Resources/#Morpheus" FontSize="21" Background="Transparent"/>
+                <TextBox Text="{Binding QuestDescription}" FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Text="Quest Objectives" FontFamily="./Resources/#Morpheus" FontSize="21" Margin="0,15,0,0" />
+                <TextBox Text="{Binding LogDescription}" FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Text="Rewards" FontFamily="./Resources/#Morpheus" FontSize="21" Margin="0,15,0,0" />
 
             </StackPanel>
         </ScrollViewer>
