--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -15,6 +15,10 @@
             <MenuItem Header="Settings">
                 <MenuItem Name="SettingViewUnfinished" Header="View unfinished creators" IsCheckable="True"
                           Click="settingViewUnfinished_Click" />
+                <MenuItem Header="Select Emulator">
+                    <RadioButton Content="TrinityCore/cMangos 3.3.5a" Name="trinity335aRb" Checked="trinity335aRb_Checked"/>
+                    <RadioButton Content="cMangos 1.12" Name="cMangos112Rb" Checked="cMangos112Rb_Checked"/>
+                </MenuItem>
             </MenuItem>
 
             <MenuItem Header="Donate" Foreground="DarkOrange" FontWeight="Bold">
