--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -21,9 +21,13 @@
                 </MenuItem>
             </MenuItem>
 
-            <MenuItem Header="Donate" Foreground="DarkOrange" FontWeight="Bold">
+            <MenuItem Header="Support us" FontWeight="Bold">
                 <MenuItem Header="Why should I donate?" Click="WhyDonate_Click" Foreground="Black" />
                 <MenuItem Header="Donate" Click="Donate_Click" Foreground="Black" />
+            </MenuItem>
+
+            <MenuItem Header="Info" >
+                <MenuItem Header="Credits" Click="Credits_Click"/>
             </MenuItem>
         </Menu>
 
