Work on Quest Creator & Lookup Tool
- Removed Quest Chain creation (use lookup tool)
- Renamed QuestControl to QuestPage
- Added quest chain data UI
- Lookup tool's searchBtn isDefault
- ItemTemplateQuery renamed to SqlQuery
- SqlQuery.FindQuestByName added
- Order SQL results desc
- Clear lookup data when using different target
- QuestNPC & GO relations (more needed)
- Prerequisites UI (only levels)
- Spell lookup (SQL & DBC)

--- a/TrinityCreator/LookupTool.xaml
+++ b/TrinityCreator/LookupTool.xaml
@@ -10,7 +10,7 @@
         <StackPanel>
             <Label Name="targetLbl" Content="Searching in..."/>
             <DockPanel>
-                <Button Name="searchBtn" Content="Search" DockPanel.Dock="Right" Click="searchBtn_Click"/>
+                <Button Name="searchBtn" Content="Search" DockPanel.Dock="Right" Click="searchBtn_Click" IsDefault="True" Width="75"/>
                 <TextBox Name="searchTxt" />
             </DockPanel>
             <DataGrid Name="dataGrid" IsReadOnly="True" />
