--- a/TrinityCreator/QuestPage.xaml
+++ b/TrinityCreator/QuestPage.xaml
@@ -1,22 +1,119 @@
-﻿<Page x:Class="TrinityCreator.QuestPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TrinityCreator"
-      mc:Ignorable="d"
-      Title="QuestPage">
-    <TabControl Name="QuestTabControl">
-        <TabItem Header="Quest Chain">
-            <StackPanel>
-                <TreeView Name="ChainTreeView"/>
-                <DockPanel>
-                    <Button Name="AddQuestBtn" Content="Add Quest" Margin="5" Click="AddQuestBtn_Click" />
-                    <Button Name="RemoveQuestBtn" Content="Remove Selected Quest" Margin="5" Click="RemoveQuestBtn_Click" />
-                </DockPanel>
-                
+﻿<UserControl x:Class="TrinityCreator.QuestPage"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:l="clr-namespace:TrinityCreator"
+             mc:Ignorable="d" Loaded="UserControl_Loaded" d:DesignWidth="700">
+    <UserControl.Resources>
+        <l:ValueToVisibilityConverter x:Key="ValueVisibilityConverter" />
+    </UserControl.Resources>
+    <DockPanel>
+        <StackPanel DockPanel.Dock="Right">
+            <l:QuestPreview QuestStatusIcon="DailyQuestIcon" />
+            
+            <GroupBox Header="Extra options">
+                <StackPanel>
+                    <CheckBox Name="setFlagsCb" Content="Set Flags" />
+                    <CheckBox Name="LimitClassCb" FontSize="12" Content="Add class limitations" Margin="0,5,0,0"
+                                  VerticalAlignment="Top" HorizontalAlignment="Left" />
+                    <CheckBox Name="LimitRaceCb" FontSize="12" Content="Add race limitations" Margin="0,5,0,0"
+                                  VerticalAlignment="Top" HorizontalAlignment="Left" />
+                </StackPanel>
+            </GroupBox>
 
-            </StackPanel>
-        </TabItem>
-    </TabControl>
-</Page>
+            <DockPanel>
+                <Label Content="Entry Id" DockPanel.Dock="Left" />
+                <TextBox Text="{Binding EntryId}" DockPanel.Dock="Right" />
+            </DockPanel>
+            
+            <Button Content="Export to SQL" Click="Button_Click" />
+        </StackPanel>
+        
+        <StackPanel DockPanel.Dock="Left">
+            <GroupBox Header="Quest Info">
+                <StackPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Quest Sort" DockPanel.Dock="Left" />
+                        <Button Name="findSortBtn" Content="Find" DockPanel.Dock="Right" Width="75" Click="findSortBtn_Click"/>
+                        <TextBox Text="{Binding PQuestSort}" DockPanel.Dock="Left" />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Quest Info" DockPanel.Dock="Left" />
+                        <ComboBox Name="questInfoCb" SelectedValue="{Binding PQuestInfo}" SelectionChanged="questInfoCb_SelectionChanged" />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Player amount" DockPanel.Dock="Left" />
+                        <TextBox Text="{Binding SuggestedGroupNum}" DockPanel.Dock="Left" ToolTip="Amount of players recommended to complete this quest." />
+                    </DockPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Quest Chain Data">
+                <StackPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Previous Quest" DockPanel.Dock="Left" />
+                        <Button Name="findPrevQuestBtn" Content="Find" DockPanel.Dock="Right" Width="75" Click="findQuestBtn_Click"/>
+                        <TextBox Text="{Binding PQuestSort}" DockPanel.Dock="Left" />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Next Quest" DockPanel.Dock="Left" />
+                        <Button Name="findNextQuestBtn" Content="Find" DockPanel.Dock="Right" Width="75" Click="findQuestBtn_Click"/>
+                        <TextBox Text="{Binding PQuestSort}" DockPanel.Dock="Left" />
+                    </DockPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Quest NPC or GameObject relations">
+                <StackPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Completer" DockPanel.Dock="Left" />
+                        <Button Name="findGoBtn" Content="Find Object" DockPanel.Dock="Right" Width="75" Click="findGoBtn_Click"/>
+                        <Button Name="findCreatureBtn" Content="Find NPC" DockPanel.Dock="Right" Width="75" Click="findCreatureBtn_Click"/>
+                        <TextBox Text="{Binding NextQuestIdChain}" DockPanel.Dock="Left" />
+                    </DockPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Prerequisites">
+                <StackPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Recommended level" DockPanel.Dock="Left" />
+                        <TextBox Text="{Binding QuestLevel}" DockPanel.Dock="Left" ToolTip="Recommended level. XP will adjust to this." />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Minimum level" DockPanel.Dock="Left" />
+                        <TextBox Text="{Binding MinLevel}" DockPanel.Dock="Left" ToolTip="Minimum level allowed to accept this quest" />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Maximum level" DockPanel.Dock="Left" />
+                        <TextBox Text="{Binding MaxLevel}" DockPanel.Dock="Left" ToolTip="Maximum level allowed to acept this quest" />
+                    </DockPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="On quest start">
+                <StackPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Start Item" DockPanel.Dock="Left" />
+                        <Button Content="Find" DockPanel.Dock="Right" Width="75" Click="findItemBtn_Click"/>
+                        <TextBox Text="{Binding StartItem}" DockPanel.Dock="Left" />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Start Item amount" DockPanel.Dock="Left" />
+                        <TextBox Text="{Binding ProvidedItemCount}" DockPanel.Dock="Left" ToolTip="Amount of start item" />
+                    </DockPanel>
+                    <DockPanel Margin="2">
+                        <Label Content="Spell Cast" DockPanel.Dock="Left" />
+                        <Button Content="Find" DockPanel.Dock="Right" Width="75" Click="findSpellBtn_Click"/>
+                        <TextBox Text="{Binding StartItem}" DockPanel.Dock="Left" ToolTip="Spell is cast on player when quest is accepted."/>
+                    </DockPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Name="questFlagsGb" Header="Quest Flags" Content="{Binding Flags}" Visibility="{Binding ElementName=setFlagsCb, Path=IsChecked, Converter={StaticResource ValueVisibilityConverter}}" />
+            <GroupBox Name="questSpecialFlagsGb" Header="Quest Special Flags" Content="{Binding SpecialFlags}" Visibility="{Binding ElementName=setFlagsCb, Path=IsChecked, Converter={StaticResource ValueVisibilityConverter}}" />
+            <GroupBox Name="LimitClassBitMaskGroupBox" Content="{Binding AllowableClass}" Header="Classes allowed"
+                          Visibility="{Binding ElementName=LimitClassCb, Path=IsChecked, Converter={StaticResource ValueVisibilityConverter}}" />
+            <GroupBox Name="LimitRaceBitMaskGroupBox" Content="{Binding AllowableRace}" Header="Races allowed"
+                          Visibility="{Binding ElementName=LimitRaceCb, Path=IsChecked, Converter={StaticResource ValueVisibilityConverter}}" />
+
+        </StackPanel>
+
+    </DockPanel>
+</UserControl>
