--- a/TrinityCreator/QuestPreview.xaml
+++ b/TrinityCreator/QuestPreview.xaml
@@ -16,7 +16,8 @@
                 <TextBox Text="{Binding QuestDescription}" FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
                 <TextBlock Text="Quest Objectives" FontFamily="./Resources/#Morpheus" FontSize="21" Margin="0,15,0,0" />
                 <TextBox Text="{Binding LogDescription}" FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
-                <TextBlock Text="Rewards" FontFamily="./Resources/#Morpheus" FontSize="21" Margin="0,15,0,0" />
+                <TextBlock Text="Completion Text" FontFamily="./Resources/#Morpheus" FontSize="21" Margin="0,15,0,0" />
+                <TextBox Text="{Binding QuestCompletionLog}" FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
 
             </StackPanel>
         </ScrollViewer>
