Work on dbc & sql
- verify SQL & dbc settings before using lookup tool
- delete old csv dbc reader & faction resource
- only run extractor as administrator

--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -41,7 +41,7 @@
                 <TabItem Header="Item" >
                     <Frame Name="ItemTab"/>
                 </TabItem>
-                <TabItem Header="Quest (UNFINISHED)" Tag="unfinished">
+                <TabItem Header="Quest (UNFINISHED)" Tag="unfinished" Height="22" VerticalAlignment="Top">
                     <Frame Name="QuestTab" />
                 </TabItem>
                 <TabItem Header="Creature (UNFINISHED)" Name="CreatureTab" Tag="unfinished" />
